--- a/Server Vocabulary Test/index.html
+++ b/Server Vocabulary Test/index.html
@@ -9,26 +9,51 @@
     <title>Vocabulary</title>
 </head>
 
-<body class="m-0 p-0 box-border bg-custom-image bg-no-repeat bg-center bg-fixed bg-cover overflow-y-auto select-none" >
+<body class="m-0 p-0 box-border bg-custom-image bg-no-repeat bg-center bg-fixed bg-cover overflow-y-auto select-none">
     <!-- Основной контейнер -->
-    <div id="container" class="w-full h-screen flex items-center justify-center text-center flex-col">
+    <div id="container" class="w-full h-screen my-10 flex items-center justify-center text-center flex-col">
         <!-- Секция для отображения слов и их перевода -->
-        <div id="words" class="w-1000 h-450 mx-auto flex flex-col items-center justify-center px-4 text-gray-800 bg-f4edea border-8 border-orange-200">
-            <h3 id="englishWordClick" class="text-6xl sm:text-5xl mb-20 select-text">English is that easy ^-^</h3>
-            <h3 id="russianWordClick" class="text-6xl sm:text-5xl mb-14 select-text">Перевод</h3>
+        <div id="words"
+            class="w-4/5 h-4/5 mx-auto flex flex-col items-center justify-center px-4 text-gray-800 bg-f4edea border-8 border-orange-200">
+            <h3 id="englishWordClick" class="text-2xl sm:text-5xl m-auto select-text">English is that easy ^-^</h3>
+            <h3 id="transcription" class="text-2xl sm:text-5xl m-auto select-text">(Transcription)
+                <div id="svgContainer" class="inline-block mr-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-5 h-4 sm:w-7 sm:h-7">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M19.114 5.636a9 9 0 010 12.728M16.463 8.288a5.25 5.25 0 010 7.424M6.75 8.25l4.72-4.72a.75.75 0 011.28.53v15.88a.75.75 0 01-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.01 9.01 0 012.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75z" />
+                    </svg>
+                </div>
+            </h3>
+            <h3 id="russianWordClick" class="text-2xl sm:text-5xl m-auto select-text">Перевод</h3>
             <!-- Кнопки навигации -->
-            <div id="buttonContainer" class="flex justify-center" >
-                <button id="backBtn" class="m-2 px-4 py-2 w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm inline-block transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">Previous Word</button>
-                <button id="toggleButton" class="m-2 px-4 py-2 w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm inline-block transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">Показать перевод</button>
-                <button id="randomBtn" class="m-2 px-4 py-2 w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm inline-block transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">Random Word</button>
-                <button id="forwardBtn" class="m-2 px-4 py-2 w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm inline-block transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">Next Word</button>
+            <div id="buttonContainer" class="w-full mb-4 md:mb-20 flex-col md:justify-center">
+                <button id="backBtn"
+                    class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
+                    Previous Word</button>
+                <button id="toggleButton"
+                    class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
+                    Показать перевод</button>
+                <button id="randomBtn"
+                    class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
+                    Random Word</button>
+                <button id="forwardBtn"
+                    class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
+                    Next Word</button>
             </div>
         </div>
         <!-- Секция поиска -->
-        <div class="searchContainer flex flex-col items-center justify-center w-1000 m-10 p-5 py-12 bg-f4edea border-8 border-orange-200">
-            <input type="text" id="searchWordInput" class="w-4/5 p-2 my-2 border border-gray-300 rounded-md text-sm bg-white transition duration-700 ease-in-out" placeholder="Введите слово для поиска">
-            <button id="searchWordButton" class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Поиск слов</button>
-            <button id="addSearchedWordButton" class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Добавить в словарик</button>
+        <div
+            class="searchContainer h-1/5 w-4/5 flex flex-col items-center justify-center m-10 p-5 py-12 bg-f4edea border-8 border-orange-200">
+            <input type="text" id="searchWordInput"
+                class="w-4/5 p-2 mt-3 border border-gray-300 rounded-md text-sm bg-white transition duration-700 ease-in-out"
+                placeholder="Введите слово для поиска">
+            <button id="searchWordButton"
+                class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Поиск
+                слов</button>
+            <button id="addSearchedWordButton"
+                class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Добавить
+                в словарик</button>
         </div>
         <!-- Скрипты -->
         <script src="script.js"></script>
