--- a/Server Vocabulary Test/index.html
+++ b/Server Vocabulary Test/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/output.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Vocabulary</title>
 </head>
 
@@ -16,15 +17,7 @@
         <div id="words"
             class="w-4/5 h-4/5 mx-auto flex flex-col items-center justify-center px-4 text-gray-800 bg-f4edea border-8 border-orange-200">
             <h3 id="englishWordClick" class="text-2xl sm:text-5xl m-auto select-text">English is that easy ^-^</h3>
-            <h3 id="transcription" class="text-2xl sm:text-5xl m-auto select-text">(Transcription)
-                <div id="svgContainer" class="inline-block mr-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="w-5 h-4 sm:w-7 sm:h-7">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M19.114 5.636a9 9 0 010 12.728M16.463 8.288a5.25 5.25 0 010 7.424M6.75 8.25l4.72-4.72a.75.75 0 011.28.53v15.88a.75.75 0 01-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.01 9.01 0 012.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75z" />
-                    </svg>
-                </div>
-            </h3>
+            <h3 id="transcription" class="text-2xl sm:text-5xl m-auto select-text">(Transcription)</h3>
             <h3 id="russianWordClick" class="text-2xl sm:text-5xl m-auto select-text">Перевод</h3>
             <!-- Кнопки навигации -->
             <div id="buttonContainer" class="w-full mb-4 md:mb-20 flex-col md:justify-center">
@@ -51,11 +44,31 @@
             <button id="searchWordButton"
                 class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Поиск
                 слов</button>
-            <button id="addSearchedWordButton"
-                class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Добавить
-                в словарик</button>
         </div>
+        <!-- Модальное окно -->
+        <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="searchModalLabel">Результат поиска</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p id="searchResult"></p>
+                </div>
+                <div class="modal-footer">
+                    <button id="addSearchedWordButton" class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Добавить
+                    в словарик</button>
+                  <button type="button" class="w-1/3 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md"" data-dismiss="modal">Закрыть</button>
+                </div>
+              </div>
+            </div>
+          </div>
         <!-- Скрипты -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="script.js"></script>
 </body>
 
