--- a/Server Vocabulary Test/index.html
+++ b/Server Vocabulary Test/index.html
@@ -17,7 +17,7 @@
         <div id="words"
             class="w-4/5 h-4/5 mx-auto flex flex-col items-center justify-center px-4 text-gray-800 bg-f4edea border-8 border-orange-200">
             <h3 id="englishWordClick" class="text-2xl sm:text-5xl m-auto select-text">English is that easy ^-^</h3>
-            <h3 id="transcription" class="text-2xl sm:text-5xl m-auto select-text">(Transcription)</h3>
+            <h3 id="transcription" class="text-2xl sm:text-5xl m-auto select-text">[Transcription]</h3>
             <h3 id="russianWordClick" class="text-2xl sm:text-5xl m-auto select-text">Перевод</h3>
             <!-- Кнопки навигации -->
             <div id="buttonContainer" class="w-full mb-4 md:mb-20 flex-col md:justify-center">
@@ -26,7 +26,7 @@
                     Previous Word</button>
                 <button id="toggleButton"
                     class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
-                    Показать перевод</button>
+                    Show translation</button>
                 <button id="randomBtn"
                     class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
                     Random Word</button>
