--- a/Server Vocabulary Test/index.html
+++ b/Server Vocabulary Test/index.html
@@ -2,74 +2,71 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/output.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Vocabulary</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style/output.css">
+  <title>Vocabulary</title>
 </head>
 
 <body class="m-0 p-0 box-border bg-custom-image bg-no-repeat bg-center bg-fixed bg-cover overflow-y-auto select-none">
-    <!-- Основной контейнер -->
-    <div id="container" class="w-full h-screen my-10 flex items-center justify-center text-center flex-col">
-        <!-- Секция для отображения слов и их перевода -->
-        <div id="words"
-            class="w-4/5 h-4/5 mx-auto flex flex-col items-center justify-center px-4 text-gray-800 bg-f4edea border-8 border-orange-200">
-            <h3 id="englishWordClick" class="text-2xl sm:text-5xl m-auto select-text">English is that easy ^-^</h3>
-            <h3 id="transcription" class="text-2xl sm:text-5xl m-auto select-text">[Transcription]</h3>
-            <h3 id="russianWordClick" class="text-2xl sm:text-5xl m-auto select-text">Перевод</h3>
-            <!-- Кнопки навигации -->
-            <div id="buttonContainer" class="w-full mb-4 md:mb-20 flex-col md:justify-center">
-                <button id="backBtn"
-                    class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
-                    Previous Word</button>
-                <button id="toggleButton"
-                    class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
-                    Show translation</button>
-                <button id="randomBtn"
-                    class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
-                    Random Word</button>
-                <button id="forwardBtn"
-                    class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
-                    Next Word</button>
-            </div>
-        </div>
-        <!-- Секция поиска -->
-        <div
-            class="searchContainer h-1/5 w-4/5 flex flex-col items-center justify-center m-10 p-5 py-12 bg-f4edea border-8 border-orange-200">
-            <input type="text" id="searchWordInput"
-                class="w-4/5 p-2 mt-3 border border-gray-300 rounded-md text-sm bg-white transition duration-700 ease-in-out"
-                placeholder="Введите слово для поиска">
-            <button id="searchWordButton"
-                class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Поиск
-                слов</button>
-        </div>
-        <!-- Модальное окно -->
-        <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="searchModalLabel">Результат поиска</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <p id="searchResult"></p>
-                </div>
-                <div class="modal-footer">
-                    <button id="addSearchedWordButton" class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Добавить
-                    в словарик</button>
-                  <button type="button" class="w-1/3 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md"" data-dismiss="modal">Закрыть</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        <!-- Скрипты -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="script.js"></script>
+  <!-- Основной контейнер -->
+  <div id="container" class="w-full h-screen my-10 flex items-center justify-center text-center flex-col">
+    <!-- Секция для отображения слов и их перевода -->
+    <div id="words"
+      class="w-4/5 h-4/5 mx-auto flex flex-col items-center justify-center px-4 text-gray-800 bg-f4edea border-8 border-orange-200">
+      <h3 id="englishWordClick" class="text-2xl sm:text-5xl m-auto select-text">English is that easy ^-^</h3>
+      <h3 id="transcription" class="text-2xl sm:text-5xl m-auto select-text">[Transcription]</h3>
+      <h3 id="russianWordClick" class="text-2xl sm:text-5xl m-auto select-text">Перевод</h3>
+      <!-- Кнопки навигации -->
+      <div id="buttonContainer" class="w-full mb-4 md:mb-20 flex-col md:justify-center">
+        <button id="backBtn"
+          class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
+          Previous Word</button>
+        <button id="toggleButton"
+          class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
+          Show translation</button>
+        <button id="randomBtn"
+          class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
+          Random Word</button>
+        <button id="forwardBtn"
+          class="m-2 px-4 py-2 w-4/5 md:w-48 h-10 rounded-xl border border-gray-300 cursor-pointer text-gray-800 text-sm transition duration-500 ease-in-out bg-transparent hover:bg-orange-200 hover:shadow-md">
+          Next Word</button>
+      </div>
+    </div>
+    <!-- Секция поиска -->
+    <div
+      class="searchContainer h-1/5 w-4/5 flex flex-col items-center justify-center m-10 p-5 py-12 bg-f4edea border-8 border-orange-200">
+      <input type="text" id="searchWordInput"
+        class="w-4/5 p-2 mt-3 border border-gray-300 rounded-md text-sm bg-white transition duration-700 ease-in-out"
+        placeholder="Введите слово для поиска">
+      <button id="searchWordButton"
+        class="w-2/5 p-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Поиск
+        слов</button>
+    </div>
+    <!-- Модальное окно -->
+<div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-50 items-center justify-center">
+  <!-- Содержимое модального окна -->
+  <div class="bg-white p-6 rounded shadow-lg w-96">
+
+    <!-- Заголовок модального окна -->
+    <div class="mb-4">
+      <h2 id="englishWordResult" class="text-xl font-bold"></h2>
+    </div>
+
+    <!-- Тело модального окна -->
+    <p id="searchResult"></p>
+    <button id="addSearchedWordButton"
+      class="w-full py-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md">Добавить
+      в словарик</button>
+    <button id="closeModalButton" type="button"
+      class="w-full py-2 my-2 rounded-xl border border-gray-300 cursor-pointer text-sm bg-transparent text-gray-800 transition duration-500 ease-in-out hover:bg-orange-200 hover:shadow-md"
+      data-dismiss="modal">Закрыть</button>
+  </div>
+</div>
+
+    <!-- Скрипты -->
+    <script src="script.js"></script>
 </body>
 
 </html>
